2012-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am (starfield_DATA): Replace dejavu.pf2 with dejavu_10.pf2,
	dejavu_12.pf2, dejavu_14.pf2 and dejavu_16.pf2.
	(dejavu.pf2): Replace with ...
	(dejavu_10.pf2), (dejavu_12.pf2), (dejavu_14.pf2), (dejavu_16.pf2):
	this.

2012-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/20_linux_xen.in: Add missing line.

2012-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/charset.h (GRUB_UTF16_UPPER_SURROGATE): Fix mask sizes.
	(GRUB_UTF16_LOWER_SURROGATE): Likewise.
	(grub_utf16_to_utf8): Likewise.

2012-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c (scan): Don't scan device tree if
	GRUB_IEEE1275_FLAG_NO_TREE_SCANNING_FOR_DISKS is set.
	* grub-core/kern/ieee1275/cmain.c (grub_ieee1275_find_options): Set
	GRUB_IEEE1275_FLAG_NO_TREE_SCANNING_FOR_DISKS on IBM hardware.
	* include/grub/ieee1275/ieee1275.h (grub_ieee1275_flag): New enum value
	GRUB_IEEE1275_FLAG_NO_TREE_SCANNING_FOR_DISKS.

2012-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/fs.c (grub_fs_probe): Handle GRUB_ERR_OUT_OF_RANGE as
	a bad FS.

2012-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/udf.c (read_string): Bail out on size=0.
	(grub_udf_read_symlink): Handle read_string failure.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (read_device_map): Improve TRANSLATORS
	comment.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix handling of UDF symlinks.

	* grub-core/fs/udf.c (read_string): New argument outbuf.
	All users updated.
	(grub_ufs_read_symlink): Rename to ...
	(grub_udf_read_symlink): ... this. All users updated.
	Handle symlinks with more than one component.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/affs.c (grub_affs_read_symlink): Fix handling of long
	symlinks. Replace leading colon with a slash.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>
